Testament to my Martyrdom

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Suprise Quiz</title>
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <h1></h1>
@@ -43,7 +43,7 @@
 <div id="results"></div>
 
 <button class="Start-Button">Start Agony</button>
-    <script src="./assets/script.js"></script>
+    <script src="script.js"></script>
     <!-- <script type="text/javascript">
         getItems();
     </script> -->
