--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 <div id="quiz"></div>
 
 <button id="submit">Receive Score</button>
-<div id="results"></div>
+<div id="showResults"></div>
 
-<button class="Start-Button">Start Agony</button>
+
+<button class="Start-Button">Start</button>
     <script src="script.js"></script>
     <!-- <script type="text/javascript">
         getItems();
